Use xScope instead of Skala Preview

--- a/SketchPreview.sketchplugin/Contents/Sketch/manifest.json
+++ b/SketchPreview.sketchplugin/Contents/Sketch/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Sketch Preview",
-  "description": "Preview Artboards in Skala Preview",
+  "description": "Preview Artboards in Skala Preview or xScope",
   "author": "Marc Schwieterman",
   "homepage": "https://github.com/marcisme/sketch-preview",
   "version": "0.8.0",
